--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     color: #1a9dd9;
     font-family: Helvetica, sans-serif;
 }
+a {
+    text-decoration: none;
+}
+
 
 .background{ 
     position: fixed;
@@ -11,7 +15,6 @@
 }
 
 header{
-    display: flex;
     position: fixed;
 
     z-index: 1;
@@ -21,18 +24,21 @@ header{
     width: 45vw;
     margin-top: 18vh;
     margin-left: 3vw;
+
+    position: fixed;
 }
 
 
 .menu ul {
     display: flex;
     list-style-type: none;
+    margin-left: 40vw;
     
 }
 
 .menu li {
-    width: 5vw;
-    margin-right: 2.5vw;
+    width: 7vw;
+    margin-right: 2vw;
     margin-top: 4vh;
     padding: 1vh 2.5vw ;
 
@@ -45,8 +51,8 @@ header{
 }
 
 .menu li:hover{
-    width: 5vw;
-    margin-right: 2.5vw;
+    width: 7vw;
+    margin-right: 2vw;
     margin-top: 4vh;
     padding: 1vh 2.5vw ;
 
@@ -59,6 +65,8 @@ header{
     box-shadow: 1px 1px 20px #1a9dd9;
 
 }
+
+
 main{
     position: absolute;
     width: 48vw;
@@ -81,7 +89,13 @@ main{
 }
 .overons p {
     text-align: center;
+    margin-bottom: 2vh;
 
+}
+
+.overons h1{
+    margin-top: 3vh;
+    margin-bottom: 2vh;
 }
 
 .geraas{
@@ -137,14 +151,16 @@ main{
     margin-top: 2vh;
 }
 
-.residentie button{
+.optie button{
     margin-top: 4vh;
     margin-bottom: 5vh;
     margin-left: auto;
     margin-right: auto;
-
     padding: 1vh 2vw;
+    
     background-color: white;
+
+
     border-radius: 20px;
     border-color: white;
     color: #1a9dd9;
@@ -154,7 +170,7 @@ main{
     text-align: center;
 }
 
-.residentie button:hover{
+.optie button:hover{
     margin-top: 4vh;
     margin-bottom: 5vh;
     margin-left: auto;
@@ -183,4 +199,76 @@ main{
     border-radius: 20px;
     box-shadow: 1px 1px 20px #1a9dd9;
 
+    text-align: center;
+}
+.contact h2{
+    margin-top: 5vh;
+}
+.contact h1{
+    margin-top: 3vh;
+}
+.contact img{
+    margin-bottom: 5vh;
+}
+.contact ul{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-around;
+    margin-top: 2vh;
+    
+}
+
+.contact svg{
+    fill: #1a9dd9;
+    color: #1a9dd9;
+}
+
+.map{
+    width: 30vw;
+    height: 30vh;
+    margin-top: 10vh;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1vh 3vw;
+
+    background-color: white;
+
+    border-radius: 20px;
+    box-shadow: 1px 1px 20px #1a9dd9;
+ 
+}
+
+.marker {
+    background-image: url('img/werkhuis-logo.png');
+    background-size: cover;
+    width: 2vw;
+    height: 4vh;
+    cursor: pointer;
+}
+
+.partners{
+    width: 30vw;
+    margin-top: 10vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5vh;
+    padding: 1vh 3vw;
+    
+    background-color: white;
+  
+    border-radius: 20px;
+    box-shadow: 1px 1px 20px #1a9dd9; 
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.partners img{
+    width: 15%;
+    padding: 3vh 3vw;
+}
+.partners h1{
+    width: 100%;
+    margin-top: 3vh;
 }
