--- a/style.css
+++ b/style.css
@@ -25,8 +25,27 @@ h2 {
 p{
     font-family: 'Poppins', sans-serif;
     font-size: 1vw;
-
 }
+
+/* Scrollbar Styling */
+body::-webkit-scrollbar {
+    width: 15.5px;
+    background-color: #1a9dd9;
+    border-radius: 10px;
+    border-style: solid;
+  }
+  
+  body::-webkit-scrollbar-track {
+    -webkit-border-radius: 10px;
+    background-color: white;
+    border-radius: 10px;
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #1a9dd9; 
+  }
 
 .background{ 
     position: fixed;
@@ -42,7 +61,7 @@ p{
     width: 89vw;
     height: 100vh;
 
-    background-color: #1a9dd94c;    
+    background-color: #1a9dd94c;  
 
 }
 
