--- a/public/style.css
+++ b/public/style.css
@@ -64,8 +64,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+/** OVERLAY **/
+
 .overlay{
-    
     z-index: 2;
     position: fixed;
     padding: 8vh 5vw;
@@ -74,9 +75,8 @@ body::-webkit-scrollbar-thumb {
     height: 100vh;
 
     background-color: #1a9dd94c;  
-}
 
-/*  OPENINGSWEEKEND BANNER INSTEAD 
+}
 
 .overlay ul{
     list-style-type: none;
@@ -91,18 +91,19 @@ body::-webkit-scrollbar-thumb {
     height: 40vh;
     margin-bottom: 5vh;
 }
-*/
 
 .overlay img{
     max-width: 100%;
     max-height: 100%;
 
-    border-radius: 20px;
-    box-shadow: 2px 2px 20px #1a9dd9;
 
-    margin-top: 12vh;
+    border-radius: 20px;
+    box-shadow: 2px 2px 20px #1a9dd9
+
     
-} 
+}
+
+/** WEBSITE **/
 
 header{
     position: fixed;
@@ -163,7 +164,7 @@ header{
 }
 
 
-
+/**MAIN**/
 
 main{
     position: absolute;
@@ -172,7 +173,37 @@ main{
     margin-top: 20vh;
 
 }
-.clubderive{
+
+.extra{
+    width: 30vw;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1vh 3vw;
+
+    text-align: center;
+
+    background-color: white;
+
+    border-radius: 20px;
+    box-shadow: 1px 1px 20px #1a9dd9;
+
+}
+
+.extralogo{
+    width: 36vw;
+    margin-left: -3vw;
+    margin-top: -1vh;
+    border-radius: 20px 20px 0 0;
+
+
+}
+
+.extra p {
+    padding-bottom: 3vh;
+    margin-top: 3vh;
+}
+
+/* .clubderive{
     margin-top: 5vh;
     width: 36vw;
     margin-left: 6vw;
@@ -182,7 +213,7 @@ main{
     width: 36vw;
     border-radius: 20px;
     box-shadow: 1px 1px 20px #1a9dd9;
-}
+} */
 
 .knop{
     display: flex;
@@ -191,7 +222,7 @@ main{
 
 .knop button{
     margin-top: 2vh;
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
     padding: 1vh 2vw;
     
     background-color: white;
@@ -209,7 +240,7 @@ main{
 
 .knop button:hover{
     margin-top: 2vh;
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
     margin-left: auto;
     margin-right: auto;
 
@@ -226,6 +257,8 @@ main{
 
     text-align: center;
 }
+
+
 .overons{
     width: 30vw;
     margin-top: 5vh;
@@ -252,7 +285,7 @@ main{
     margin-bottom: 2vh;
 }
 
-.geraas{
+/* .geraas{
     width: 30vw;
     margin-left: auto;
     margin-right: auto;
@@ -283,7 +316,7 @@ main{
 .geraas p {
     padding-bottom: 3vh;
     margin-top: 2vh;
-}
+} */
 
 .residentie{
     width: 30vw;
